--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,7 @@ en:
       phone: "Phone number"
       address_html: "Address"
       email: "E-mail"
+      postal_code: "Postal code"
       pay_type: "Pay with"
       pay_prompt_html: "Select a payment method"
       submit: "Place Order"
@@ -90,6 +91,7 @@ es:
       phone: "Phone number"
       address_html: "Direcci&oacute;n"
       email: "E-mail"
+      postal_code: "Postal code"
       pay_type: "Forma de pago"
       pay_prompt_html: "Seleccione un m&eacute;todo de pago"
       submit: "Realizar Pedido"
@@ -147,6 +149,7 @@ id:
       phone: "Nomor handphone"
       address_html: "Alamat"
       email: "E-mail"
+      postal_code: "Kode pos"
       pay_type: "Pembayaran"
       pay_prompt_html: "Pilih Cara Pembayaran"
       submit: "Selesaikan Pesanan"
